[package]
name = "rusttest"
version = "0.2.0"
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
crossbeam = "0.7"
dotenv = "0.14"
env_logger = "0.7"
failure = "0.1"
futures = "0.1"
log = "0.4"
postgres = { version = "0.15", features = ["with-chrono"] }
reqwest = { version = "0.9", features = ["socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"
tokio-serde-json = "0.2"
