[package]
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"
name = "rusttest"
version = "0.3.0"

[dependencies]
chrono = "0.4"
crossbeam = "0.8"
deadpool-postgres = "0.7"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
netc = {version = "0.6", git = "https://github.com/serbe/netc"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sled = "0.34"
thiserror = "1.0"
tokio = {version = "1.16", features = ["io-util", "sync", "rt-multi-thread", "net"]}
tokio-postgres = {version = "0.7", features = ["with-chrono-0_4"]}
tokio-stream = "0.1"
tokio-util = {version = "0.6", features = ["codec"]}
